--- a/package.json
+++ b/package.json
@@ -10,12 +10,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "start": "node ./dist/index.js"
-  },
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
+    "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
