--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "synapse-mcp-server",
-  "version": "0.1.0",
+  "name": "@kmmuntasir/synapse-mcp-server",
+  "version": "0.1.1",
   "description": "Synapse-MCP: A Hybrid Universal Knowledge Base MCP Server",
   "type": "module",
   "bin": {
-    "synapse-mcp": "./dist/index.js"
+    "synapse-mcp": "dist/index.js"
+  },
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
   },
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "start": "node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,7 +26,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/kmmuntasir/synapse-mcp-server/issues"
   },
