--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "start": "node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublishOnly": "npm run build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
