--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "build": "tsc",
     "watch": "tsc -w",
     "start": "node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "inspector": "npx @modelcontextprotocol/inspector node dist/index.js",
+    "inspect-cli": "node scripts/cli_inspector.js",
+    "manual-test": "node scripts/manual_test.js"
   },
   "repository": {
     "type": "git",
@@ -33,10 +36,11 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.1",
     "dotenv": "^17.2.3",
+    "octokit": "^5.0.5",
     "zod": "^4.2.1"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/node": "^22.0.0"
+    "@types/node": "^22.0.0",
+    "typescript": "^5.0.0"
   }
 }
