SYNAPSE-15: Change env variable separators to comma for platform independence

--- a/env.example
+++ b/env.example
@@ -1,10 +1,10 @@
 # Linux
-NOTES_ROOT="/home/john/Dropbox/Obsidian:/home/john/another_directory"
-GITHUB_REPOS=canonical/ubuntu.com:kmmuntasir/synapse-mcp-server/docs
+NOTES_ROOT="/home/john/Dropbox/Obsidian,/home/john/another_directory"
+GITHUB_REPOS=canonical/ubuntu.com,kmmuntasir/synapse-mcp-server/docs
 
 # Windows
-# NOTES_ROOT="C:/Users/John/Dropbox/Obsidian;D:/another_directory"
-# GITHUB_REPOS=canonical/ubuntu.com;kmmuntasir/synapse-mcp-server/docs
+# NOTES_ROOT="C:/Users/John/Dropbox/Obsidian,D:/another_directory"
+# GITHUB_REPOS=canonical/ubuntu.com,kmmuntasir/synapse-mcp-server/docs
 
 # Github
 GITHUB_TOKEN=YOUR_GITHUB_TOKEN
